# ue-ngs

./: .gitignore  README.dev.md  README.md  build.py  pelicanconf.py  publishconf.py  pyproject.toml  serve.sh
.github/workflows/: deploy.yml
content/: code-of-conduct.md
content/events/: 251221_ue_filmjam.md  260418_ue_moku_01.md  260509_ue_moku_02.md  260627_ue_moku_03.md
output/: events.json  index.html  sitemap.xml
output/events/: index.html
output/events/ue-filmjam-7th/: index.html
output/events/ue-moku-0627/: index.html
output/events/ue-mokumoku-02/: index.html
output/events/ue-mokumoku-03/: index.html
output/theme/css/: events.css
output/theme/js/: main.js
themes/ue_nagasaki/static/css/: events.css  style.css
themes/ue_nagasaki/templates/: archives.html  article.html  base.html  index.html
